<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_10"
        android:layout_marginTop="@dimen/d_30"
        android:layout_marginEnd="@dimen/d_10"
        android:layout_marginBottom="@dimen/d_10"
        android:background="@color/blue_gray"
        app:cardCornerRadius="@dimen/d_5"
        app:cardElevation="@dimen/d_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/d_200"
                android:src="@drawable/ic_articles_placeholder"
                android:textSize="@dimen/text_16"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/lato_normal_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_20"
                android:text="@string/title"
                android:textColor="@color/gray_900"
                android:textSize="@dimen/text_24"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photo"
                tools:ignore="HardcodedText" />


            <TextView
                android:id="@+id/tvAuthor"
                style="@style/lato_normal_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_12"
                android:paddingBottom="@dimen/d_12"
                android:text="@string/by"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/text_14"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvDescription"
                style="@style/lato_normal_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_12"
                android:paddingBottom="@dimen/d_12"
                android:text="@string/by"
                android:textColor="@color/gray_600"
                android:textSize="@dimen/text_14"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/lato_normal_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_12"
                android:layout_marginEnd="@dimen/d_10"
                android:layout_marginBottom="@dimen/d_30"
                android:text="@string/date"
                android:textColor="@color/gray_100"
                android:textSize="@dimen/text_12"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/photo"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenWebsite"
        style="@style/Widget.NewsApp.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/d_8"
        android:layout_marginTop="@dimen/d_128"
        android:layout_marginEnd="@dimen/d_8"
        android:layout_marginBottom="@dimen/d_16"
        android:text="@string/open_website"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

