<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/invoices_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/d_20"
    android:layout_marginTop="@dimen/d_10"
    android:layout_marginEnd="@dimen/d_20"
    android:layout_marginBottom="@dimen/d_10"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/d_5"
    app:cardElevation="@dimen/d_5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layoutToolbar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_articles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/d_200"
            android:src="@drawable/ic_articles_placeholder"
            android:textSize="@dimen/text_16"
            android:scaleType="fitXY"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/lato_normal_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/d_20"
            android:layout_marginStart="@dimen/d_20"
            android:layout_marginTop="@dimen/d_20"
            android:text="@string/title"
            android:textColor="@color/gray_900"
            android:textSize="@dimen/text_24"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tvAuthor"
            style="@style/lato_normal_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_12"
            android:paddingBottom="@dimen/d_12"
            android:text="@string/by"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_14"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/lato_normal_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_12"
            android:layout_marginEnd="@dimen/d_20"
            android:layout_marginBottom="@dimen/d_20"
            android:text="@string/date"
            android:textColor="@color/gray_600"
            android:textSize="@dimen/text_12"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

